# dso-api

./: .gitignore  docker-compose.yml  pyproject.toml  setup.cfg
k8s/: database-claim0-persistentvolumeclaim.yaml  database-claim1-persistentvolumeclaim.yaml  database-deployment.yaml  database-service.yaml  dso-api-deployment.yaml  dso-api-service.yaml  namespaces.yml  network-policies.yml  sociaal-deployment.yaml  sociaal-service.yml
schemas/data/datasets/rinoa/: rinoa.json
schemas/data/datasets/suwi/: suwi.json
src/: Dockerfile  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  suwi.json  suwi_with_nest.json
src/dso_api/: settings.py
src/dso_api/dynamic_api/: filterset.py  middleware.py  permissions.py  routers.py  schema.py  urls.py
src/dso_api/dynamic_api/remote/: serializers.py
src/dso_api/dynamic_api/views/: __init__.py  graphql.py
src/rest_framework_dso/: serializers.py  views.py
