[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.venv
  | dist
)/
'''

[metadata]
name = dso-vincentroest
version = 0.0.1
author = dso
author_email = dso@gmail.com
description = dso
long_description = file: README.md
url = https://github.com/vincentroest/dso-api

[options]
package_dir = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
